@@ -1,2 +1,3 @@
 DIST ovirt-log-collector-3.2.1.tar.gz 368770 SHA256 0ee7f0293ec7f32f549a82fbf75cce50749f5fac37bc124b473b9150475b63ee SHA512 12f2f24a61a6b50bff4183ad405b05258d8718dfd2a80b3cd3f99a6453b17a08941e5572d961b4cd2202a5bab184574ef67d35f098503cdbe6ba8430e6a9f304 WHIRLPOOL 792c7d19b2dff03db91a1105cae62b9fe84fe7970cc8d9c55a706e43548a65b1d688e78a6eb10c45bedddd6aa6904a7bf5f283cbbcc0297a44d98ed3aef77172
 DIST ovirt-log-collector-3.4.1.tar.gz 200751 SHA256 5e74ea4384a8d27c14d6ff81b32c7471807fdf54944498939acb1274da0751d3 SHA512 d15a06f07f995b52a5fff599a2a58e04c79ed690ce83561ec5749bc4eb3eb28a3656cb8cffe6d05893a7faa8b719b1c127809bd3662c5b7e68233d95ec39f703 WHIRLPOOL 69d5bc75aec56ca8bbf501f87ec2f981179e635946d346b576c59c477459c4da85032774acc7e7806c7d71b535dbaba351ced84fdafe7e0d451befcfb6e7f404
+DIST ovirt-log-collector-3.4.2.tar.gz 203958 SHA256 5e1d127efd20f7034cee0d0b5bdb602a3557bb789529b953fd38c14e3e90eb07 SHA512 caf274a6bd695942c6e094c92aebc7ff0ff27ffb60e5bbf768855c91c3bfc8f2ad2d4090e77b88db578109ec9695549960a60c9e02615e85de57e8db24fe1598 WHIRLPOOL 82a3c6e488bd754d97c91cc8a4bf6c069d0822d0caa7a938e82c4cc2f1560ec1319c84ae0a03f76564478d3974815db293f4b818bdb5b3ee5c70f25ad7024168
